manual/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
spec:
  selector:
    app: echoserver
  ports:
  - port: 8080
    targetPort: 8080
